Project created using TypeScript Template (lib)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "{{project-name}}",
+	"name": "auth-template",
 	"version": "1.0.0",
-	"description": "{{project-name}}",
+	"description": "auth-template",
 	"private": "true",
 	"typescript-template": {
 		"base": "1.0.1",
@@ -41,13 +41,13 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/{{project-org}}/{{project-name}}.git"
+		"url": "git+https://github.com/auth-template/auth-template.git"
 	},
-	"author": "{{project-org}}",
+	"author": "auth-template",
 	"license": "MIT",
 	"bugs": {
-		"url": "https://github.com/{{project-org}}/{{project-name}}/issues"
+		"url": "https://github.com/auth-template/auth-template/issues"
 	},
-	"homepage": "https://github.com/{{project-org}}/{{project-name}}#readme",
+	"homepage": "https://github.com/auth-template/auth-template#readme",
 	"keywords": []
 }
